--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         <div class="navbar-content">
             <a href="#home" data-section="home"><iconify-icon icon="ph:user"></iconify-icon>Home</a>
             <a href="#summary" data-section="summary"><iconify-icon icon="ph:briefcase"></iconify-icon>Summary</a>
-            <a href="#experience" data-section="experience"><iconify-icon icon="ph:file-text"></iconify-icon>Experience</a>
+            <a href="#experience" data-section="experience"><iconify-icon
+                    icon="ph:file-text"></iconify-icon>Experience</a>
             <a href="#skills" data-section="skills"><iconify-icon icon="ph:star"></iconify-icon>Skills</a>
             <a href="#links" data-section="links"><iconify-icon icon="line-md:link"></iconify-icon>Links</a>
+            <div class="nav-indicator"></div> <!--Nuevo elemento indicador -->
         </div>
     </nav>
 
@@ -71,44 +73,55 @@
         <h2>footer</h2>
     </footer>
 
+    <!-- funcionalidad para barra de navegacion-->
     <script>
-    // Selecciona todos los enlaces de la navbar
-    const navLinks = document.querySelectorAll('.navbar-content a');
-    const sections = document.querySelectorAll('main section');
+        const navLinks = document.querySelectorAll('.navbar-content a');
+        const sections = document.querySelectorAll('main section');
+        const indicator = document.querySelector('.nav-indicator');
 
-    // Configura IntersectionObserver
-    const observer = new IntersectionObserver(
-      (entries) => {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            // Remueve .active de todos los enlaces
-            navLinks.forEach((link) => link.classList.remove('active'));
-            // Encuentra el enlace correspondiente a la sección visible
-            const activeLink = document.querySelector(`.navbar-content a[data-section="${entry.target.id}"]`);
-            if (activeLink) {
-              activeLink.classList.add('active');
+        const moveIndicator = (element) => {
+            indicator.style.width = `${element.offsetWidth}px`;
+            indicator.style.transform = `translateX(${element.offsetLeft}px)`;
+        };
+
+        // IntersectionObserver para activar el botón correspondiente
+        const observer = new IntersectionObserver(
+            (entries) => {
+                entries.forEach((entry) => {
+                    if (entry.isIntersecting) {
+                        navLinks.forEach((link) => link.classList.remove('active'));
+                        const activeLink = document.querySelector(`.navbar-content a[data-section="${entry.target.id}"]`);
+                        if (activeLink) {
+                            activeLink.classList.add('active');
+                            moveIndicator(activeLink);
+                        }
+                    }
+                });
+            },
+            {
+                threshold: 0.5
             }
-          }
+        );
+
+        sections.forEach((section) => observer.observe(section));
+
+        // Iniciar posición del indicador en el botón activo (por si carga desde mitad de la página)
+        window.addEventListener('load', () => {
+            const activeLink = document.querySelector('.navbar-content a.active');
+            if (activeLink) {
+                moveIndicator(activeLink);
+            }
         });
-      },
-      {
-        root: null, // Usa el viewport como raíz
-        threshold: 0.5, // Activa cuando el 50% de la sección es visible
-        rootMargin: '0px' // Margen adicional, ajustable si es necesario
-      }
-    );
 
-    // Observa todas las secciones
-    sections.forEach((section) => observer.observe(section));
+        window.addEventListener('resize', () => {
+            const activeLink = document.querySelector('.navbar-content a.active');
+            if (activeLink) {
+                moveIndicator(activeLink);
+            }
+        });
 
-    // Resaltar enlace al hacer clic
-    navLinks.forEach((link) => {
-      link.addEventListener('click', () => {
-        navLinks.forEach((l) => l.classList.remove('active'));
-        link.classList.add('active');
-      });
-    });
-  </script>
+        
+    </script>
 
 </body>
 
