mejoras barra de navegacion y mas
Se aplico suavizado en selección de botón.
Se aplico responsive para el navbar.
Se aplico animación de pulso.
Se modifico header para su posicionamiento

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="#home" data-section="home"><iconify-icon icon="ph:user"></iconify-icon>Home</a>
-            <a href="#summary" data-section="summary"><iconify-icon icon="ph:briefcase"></iconify-icon>Summary</a>
+            <a href="#home" data-section="home"><iconify-icon icon="ph:user"></iconify-icon><p>Home</p></a>
+            <a href="#summary" data-section="summary"><iconify-icon icon="ph:briefcase"></iconify-icon><p>Summary</p></a>
             <a href="#experience" data-section="experience"><iconify-icon
-                    icon="ph:file-text"></iconify-icon>Experience</a>
-            <a href="#skills" data-section="skills"><iconify-icon icon="ph:star"></iconify-icon>Skills</a>
-            <a href="#links" data-section="links"><iconify-icon icon="line-md:link"></iconify-icon>Links</a>
+                    icon="ph:file-text"></iconify-icon><p>Experience</p></a>
+            <a href="#skills" data-section="skills"><iconify-icon icon="ph:star"></iconify-icon><p>Skills</p></a>
+            <a href="#links" data-section="links"><iconify-icon icon="line-md:link"></iconify-icon><p>Links</p></a>
             <div class="nav-indicator"></div> <!--Nuevo elemento indicador -->
         </div>
     </nav>
