sección información personal
+se agrego estilos
+maquetación
+iconos
+enlaces
+desktop
-responsive
momentáneamente esta pensado para 1920x1080

--- a/index.html
+++ b/index.html
@@ -24,12 +24,21 @@
 
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="#home" data-section="home"><iconify-icon icon="ph:user"></iconify-icon><p>Home</p></a>
-            <a href="#summary" data-section="summary"><iconify-icon icon="ph:briefcase"></iconify-icon><p>Summary</p></a>
-            <a href="#experience" data-section="experience"><iconify-icon
-                    icon="ph:file-text"></iconify-icon><p>Experience</p></a>
-            <a href="#skills" data-section="skills"><iconify-icon icon="ph:star"></iconify-icon><p>Skills</p></a>
-            <a href="#links" data-section="links"><iconify-icon icon="line-md:link"></iconify-icon><p>Links</p></a>
+            <a href="#home" data-section="home"><iconify-icon icon="ph:user"></iconify-icon>
+                <p>Home</p>
+            </a>
+            <a href="#summary" data-section="summary"><iconify-icon icon="ph:briefcase"></iconify-icon>
+                <p>Summary</p>
+            </a>
+            <a href="#experience" data-section="experience"><iconify-icon icon="ph:file-text"></iconify-icon>
+                <p>Experience</p>
+            </a>
+            <a href="#skills" data-section="skills"><iconify-icon icon="ph:star"></iconify-icon>
+                <p>Skills</p>
+            </a>
+            <a href="#links" data-section="links"><iconify-icon icon="line-md:link"></iconify-icon>
+                <p>Links</p>
+            </a>
             <div class="nav-indicator"></div> <!--Nuevo elemento indicador -->
         </div>
     </nav>
@@ -40,7 +49,31 @@
 
         <section id="home" class="section home">
             <!-- Presentación inicial -->
-            <h3>section hero-section</h3>
+            <div class="initial-presentation"> 
+                <h3>Desarrollador de software</h3>
+                <h1>Ganne Moreno Pablo Matias</h1>
+                <div class="contact-content">
+                    <div class="email contact-information">
+                        <iconify-icon icon="bi:envelope"></iconify-icon>
+                        <p>gannematias10@gmail.com</p>
+                    </div>
+                    <div class="linkedin contact-information">
+                        <iconify-icon icon="circum:linkedin"></iconify-icon>
+                        <a href="https://www.linkedin.com/in/matias-ganne/">linkedin.com/in/matias-ganne/</a>
+                    </div>
+                    <div class="phone contact-information">
+                        <iconify-icon icon="lucide:phone"></iconify-icon>
+                        <p>+54 9 3834336680</p>
+                    </div>
+                    <div class="location contact-information">
+                        <iconify-icon icon="akar-icons:location"></iconify-icon>
+                        <p>Catamarca, Argentina</p>
+                    </div>
+                </div>
+
+            </div>
+
+
         </section>
 
         <section id="summary" class="section summary">
@@ -120,7 +153,7 @@
             }
         });
 
-        
+
     </script>
 
 </body>
