sección summary con first mobile
estructura básica con estilos
falta aplicar funcionalidad para blur en el fondo al hacer scroll
también cambiar por textos reales

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <section id="home" class="section home">
             <!-- Presentación inicial -->
-            <div class="initial-presentation"> 
+            <div class="initial-presentation">
                 <h3>Desarrollador de software</h3>
                 <h1>Ganne Moreno Pablo Matias</h1>
                 <div class="contact-content">
@@ -78,7 +78,33 @@
 
         <section id="summary" class="section summary">
             <!-- Presentación inicial -->
-            <h3>section hero-section</h3>
+
+            <h2>Summary</h2>
+            <div class="experience-text">
+                <small>I am an experienced and detail-oriented UX/UI product designer dedicated to creating intuitive
+                    and
+                    impactful digital experiences. Over the years, I have honed my skills in user research, wireframing,
+                    prototyping, and visual design, always striving to balance user needs with business objectives. My
+                    passion lies in understanding how people interact with technology and crafting solutions that are
+                    both
+                    functional and aesthetically pleasing.
+                </small>
+                <small>I have collaborated with diverse teams, including developers, marketers, and product managers, to
+                    bring concepts to life, ensuring seamless integration of design and functionality. My design
+                    philosophy
+                    centers on empathy and innovation—placing the user at the heart of every decision while leveraging
+                    the
+                    latest tools and trends to stay ahead in the field.
+                </small>
+            </div>
+
+            <div class="main-text">
+                <h3>Driven by a curiosity to learn and improve, I continuously explore new tools and methodologies to
+                    enhance my work. Whether working on web applications, mobile interfaces, or design systems, I am
+                    committed to delivering high-quality results that make a difference for users and businesses alike.
+                </h3>
+            </div>
+
         </section>
 
         <!-- ABOUT SECTION -->
@@ -101,11 +127,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer">
-        <!-- Redes sociales + copyright -->
-        <h2>footer</h2>
-    </footer>
-
+    
     <!-- funcionalidad para barra de navegacion-->
     <script>
         const navLinks = document.querySelectorAll('.navbar-content a');
