--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
                 });
             },
             {
-                threshold: 0.5
+                threshold: 0.2,
+                rootMargin: "0px 0px -100px 0px"
             }
         );
 
