--- a/index.html
+++ b/index.html
@@ -310,21 +310,18 @@
             </div>
         </section>
 
-        <section id="languages" class="section">
+        <!-- LANGUAGES SECTION -->
+        <section id="languages" class="languages section">
             <h2>Idiomas</h2>
 
             <div class="language-item">
-                <span class="language-name">Inglés Técnico</span>
-                <div class="language-bar">
-                    <div class="language-level"></div>
-                </div>
+                <p class="language-name">Español</p>
+                 <progress class="language-progress" value="100" max="100"></progress>
             </div>
 
             <div class="language-item">
-                <span class="language-name">Español</span>
-                <div class="language-bar">
-                    <div class="language-level"></div>
-                </div>
+                <span class="language-name">Inglés Técnico</span>
+                 <progress class="language-progress" value="60" max="100"></progress>
             </div>
         </section>
 
