--- a/index.html
+++ b/index.html
@@ -250,106 +250,112 @@
 
         <!-- PROJECTS SECTION -->
         <section id="skills" class="section skills">
-            <h2>Skills & Tools</h2>
-            <div class="skill-category">
-                <ul class="skill-list">
-                    <li class="skill-item">User Research</li>
-                    <li class="skill-item">Wireframing/Prototyping</li>
-                    <li class="skill-item">Interaction Design</li>
-                    <li class="skill-item">Responsive Web Design</li>
-                    <li class="skill-item">Usability Testing</li>
-                    <li class="skill-item">Visual Design</li>
-                    <li class="skill-item">Design Systems</li>
-                </ul>
-            </div>
 
-            <!-- sección de Herramientas (iconos) -->
-            <!--Simple Icons (ej: https://cdn.simpleicons.org/nombredelicono/color).-->
-            <!--conify (ej: https://api.iconify.design/mdi:github.svg).-->
-            <div class="tools-grid">
+            <div class="skill-tools">
+                <h2>Skills & Tools</h2>
 
-                <div class="tool-item">
-                    <img src="https://img.icons8.com/?size=100&id=zfHRZ6i1Wg0U&format=png&color=000000" width="40"
-                        alt="Figma">
-                    <span>Figma</span>
+                <!-- category -->
+                <div class="skill-category">
+                    <ul class="skill-list">
+                        <li class="skill-item">User Research</li>
+                        <li class="skill-item">Wireframing/Prototyping</li>
+                        <li class="skill-item">Interaction Design</li>
+                        <li class="skill-item">Responsive Web Design</li>
+                        <li class="skill-item">Usability Testing</li>
+                        <li class="skill-item">Visual Design</li>
+                        <li class="skill-item">Design Systems</li>
+                    </ul>
                 </div>
 
-                <div class="tool-item">
-                    <img src="https://img.icons8.com/?size=100&id=ZZNsPaonr90b&format=png&color=0000006" width="40"
-                        alt="Framer">
-                    <span>Framer</span>
-                </div>
+                <!-- Tools (icon) -->
+                <div class="tools-grid">
 
-                <div class="tool-item">
-                    <img src="https://cdn.simpleicons.org/sketch/F7B500" width="40" alt="Sketch">
-                    <span>Sketch</span>
-                </div>
-
-                <div class="tool-item">
-                    <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000" width="40"
-                        alt="HTML 5">
-                    <span>HTML 5</span>
-                </div>
-
-                <div class="tool-item">
-                    <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000" width="40" alt="CSS">
-                    <span>CSS</span>
-                </div>
-
-                <div class="tool-item">
-                    <img src="https://img.icons8.com/?size=100&id=78Fr72VCwbPq&format=png&color=000000" width="40"
-                        alt="Sass">
-                    <span>Sass</span>
-                </div>
-
-                <div class="tool-item">
-                    <img src="https://img.icons8.com/?size=100&id=me9baOv8L5z9&format=png&color=000000" width="40"
-                        alt="Canva">
-                    <span>Canva</span>
-                </div>
-            </div>
-        </section>
-
-        <!-- LANGUAGES SECTION -->
-        <section id="languages" class="languages section">
-            <h2>Idiomas</h2>
-
-            <div class="language-item">
-                <p class="language-name">Español</p>
-                 <progress class="language-progress" value="100" max="100"></progress>
-            </div>
-
-            <div class="language-item">
-                <span class="language-name">Inglés Técnico</span>
-                 <progress class="language-progress" value="60" max="100"></progress>
-            </div>
-        </section>
-
-        <section id="education" class="section">
-            <h2>Educación & Certificaciones</h2>
-
-            <div class="timeline-container">
-                <!-- Línea vertical -->
-                <div class="timeline-line"></div>
-
-                <!-- Item 1 -->
-                <div class="education-item">
-                    <div class="education-dot"></div>
-                    <div class="education-content">
-                        <h3>Diseño UX/UI Avanzado</h3>
-                        <p class="education-meta">Coursera · 2023</p>
+                    <div class="tool-item">
+                        <img src="https://img.icons8.com/?size=100&id=zfHRZ6i1Wg0U&format=png&color=000000" width="40"
+                            alt="Figma">
+                        <span>Figma</span>
                     </div>
-                </div>
 
-                <!-- Item 2 -->
-                <div class="education-item">
-                    <div class="education-dot"></div>
-                    <div class="education-content">
-                        <h3>Licenciatura en Diseño Gráfico</h3>
-                        <p class="education-meta">Universidad Nacional · 2020-2024</p>
+                    <div class="tool-item">
+                        <img src="https://img.icons8.com/?size=100&id=ZZNsPaonr90b&format=png&color=0000006" width="40"
+                            alt="Framer">
+                        <span>Framer</span>
+                    </div>
+
+                    <div class="tool-item">
+                        <img src="https://cdn.simpleicons.org/sketch/F7B500" width="40" alt="Sketch">
+                        <span>Sketch</span>
+                    </div>
+
+                    <div class="tool-item">
+                        <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000" width="40"
+                            alt="HTML 5">
+                        <span>HTML 5</span>
+                    </div>
+
+                    <div class="tool-item">
+                        <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000" width="40"
+                            alt="CSS">
+                        <span>CSS</span>
+                    </div>
+
+                    <div class="tool-item">
+                        <img src="https://img.icons8.com/?size=100&id=78Fr72VCwbPq&format=png&color=000000" width="40"
+                            alt="Sass">
+                        <span>Sass</span>
+                    </div>
+
+                    <div class="tool-item">
+                        <img src="https://img.icons8.com/?size=100&id=me9baOv8L5z9&format=png&color=000000" width="40"
+                            alt="Canva">
+                        <span>Canva</span>
                     </div>
                 </div>
             </div>
+
+            <!-- LANGUAGES SECTION -->
+            <div class="languages">
+                <h2>Idiomas</h2>
+
+                <div class="language-item">
+                    <p class="language-name">Español</p>
+                    <progress class="language-progress" value="100" max="100"></progress>
+                </div>
+
+                <div class="language-item">
+                    <span class="language-name">Inglés Técnico</span>
+                    <progress class="language-progress" value="60" max="100"></progress>
+                </div>
+            </div>
+
+            <!-- EDUCATION SECTION -->
+            <div class="education">
+                <h2>Educación & Certificaciones</h2>
+
+                <div class="timeline-container">
+                    <!-- Línea vertical -->
+                    <div class="timeline-line"></div>
+
+                    <!-- Item 1 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>Diseño UX/UI Avanzado</h3>
+                            <p class="education-meta">Coursera · 2023</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 2 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>Licenciatura en Diseño Gráfico</h3>
+                            <p class="education-meta">Universidad Nacional · 2020-2024</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <!-- CONTACT SECTION -->
