Sección de contacto
estructura y estilos

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
         </section>
 
-        <!-- PROJECTS SECTION -->
+        <!-- SKILLS SECTION -->
         <section id="skills" class="section skills">
 
             <div class="skill-tools">
@@ -355,13 +355,60 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
         <!-- CONTACT SECTION -->
         <section id="links" class="section contact-section">
-            <!-- Formulario de contacto -->
-            <h3>section contact-section</h3>
+            <h2>Links</h2>
+
+            <!-- Redes Sociales (Iconos) -->
+            <div class="social-links">
+                <a href="#" target="_blank" class="social-icon">
+                    <img src="https://img.icons8.com/?size=100&id=xuvGCOXi8Wyg&format=png&color=000000" width="40"
+                            alt="linkedin">
+                </a>
+                <a href="#" target="_blank" class="social-icon">
+                    <img src="https://img.icons8.com/?size=100&id=LoL4bFzqmAa0&format=png&color=000000" width="40"
+                            alt="Github">
+                </a>
+                <a href="#" target="_blank" class="social-icon">
+                    <img src="https://img.icons8.com/?size=100&id=qyRpAggnV0zH&format=png&color=000000" width="40"
+                            alt="Gmail">
+                </a>
+                <a href="#" target="_blank" class="social-icon">
+                    <img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" width="40"
+                            alt="Instagram">
+                </a>
+                <a href="#" target="_blank" class="social-icon">
+                    <img src="https://img.icons8.com/?size=100&id=LoL4bFzqmAa0&format=png&color=000000" width="40"
+                            alt="Github">
+                </a>
+                <a href="#" target="_blank" class="social-icon">
+                    <img src="https://img.icons8.com/?size=100&id=qyRpAggnV0zH&format=png&color=000000" width="40"
+                            alt="Gmail">
+                </a>
+                <a href="#" target="_blank" class="social-icon">
+                    <img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" width="40"
+                            alt="Instagram">
+                </a>
+            </div>
+
+            <!-- Información de Contacto (como en tu Home) -->
+            <div class="contact-info">
+                <div class="phone contact-information">
+                    <iconify-icon icon="lucide:phone"></iconify-icon>
+                    <p>+54 9 3834336680</p>
+                </div>
+                <div class="email contact-information">
+                    <iconify-icon icon="bi:envelope"></iconify-icon>
+                    <p>gannematias10@gmail.com</p>
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="copyright">
+                <p>© 2024 <strong>Pablo Matías Ganne Moreno</strong> - Diseñado y desarrollado por mí.</p>
+            </div>
         </section>
     </main>
 
