seccion de experiencia
Se agrego la card para ir a el proyecto en cuestión

--- a/index.html
+++ b/index.html
@@ -139,7 +139,35 @@
 
                         <div class="projects-links">
                             <h4>Selected Projects</h4>
-                            <!-- añadir enlaces a proyectos -->
+                            <div class="project-gallery">
+                                <!-- Proyecto 1 -->
+                                <article class="project-card">
+                                    <div class="project-image" style="background-image: url('ruta/a/tu-imagen.jpg');">
+                                        <div class="project-content">
+                                            <h3 class="project-title">Nombre del Proyecto</h3>
+                                            <p class="project-description">Breve descripción del proyecto</p>
+                                        </div>
+                                        <a href="#" class="project-link">
+                                            <iconify-icon icon="material-symbols:arrow-outward"
+                                                style="rotate: 45deg;"></iconify-icon>
+                                        </a>
+                                    </div>
+                                </article>
+
+                                <!-- Proyecto 2 -->
+                                <article class="project-card">
+                                    <div class="project-image" style="background-image: url('ruta/a/otra-imagen.jpg');">
+                                        <div class="project-content">
+                                            <h3 class="project-title">Otro Proyecto</h3>
+                                            <p class="project-description">Otra descripción interesante</p>
+                                        </div>
+                                        <a href="#" class="project-link">
+                                            <iconify-icon icon="material-symbols:arrow-outward"
+                                                style="rotate: 45deg;"></iconify-icon>
+                                        </a>
+                                    </div>
+                                </article>
+                            </div>
                         </div>
 
                         <div class="experience-tasks">
