cambios de textos
se cambiaron los texto y además de eso modifico small por p

--- a/index.html
+++ b/index.html
@@ -82,27 +82,49 @@
 
             <h2>Summary</h2>
             <div class="experience-text">
-                <small>I am an experienced and detail-oriented UX/UI product designer dedicated to creating intuitive
-                    and
-                    impactful digital experiences. Over the years, I have honed my skills in user research, wireframing,
-                    prototyping, and visual design, always striving to balance user needs with business objectives. My
-                    passion lies in understanding how people interact with technology and crafting solutions that are
-                    both
-                    functional and aesthetically pleasing.
-                </small>
-                <small>I have collaborated with diverse teams, including developers, marketers, and product managers, to
-                    bring concepts to life, ensuring seamless integration of design and functionality. My design
-                    philosophy
-                    centers on empathy and innovation—placing the user at the heart of every decision while leveraging
-                    the
-                    latest tools and trends to stay ahead in the field.
-                </small>
+                <p class="exp">Soy Técnico Electromecánico, que decidió dirigir su carrera hacia otro mundo que le
+                    apasiona que es la tecnología. Comencé este camino estudiando Ingeniería en Informática, por
+                    cuestión de tiempo opté por una formación más enfocada a convertirme en un profesional del
+                    desarrollo de software. Actualmente me encuentro en formación para ser desarrollador de software,
+                    con un interés hacia el desarrollo Front-End ya que me encanta ver proyectos estético, con
+                    animaciones fluidas y mas que nada, poder ser la persona que realiza esos proyectos.
+                </p>
+                <p class="exp">En este tiempo, pude especializarme en crear interfaces fieles al diseño original de mis
+                    colegas diseñadores, realizando maquetaciones limpias, aplicando estilos adecuados y cuidando cada
+                    mínimo detalle. Me destaco por ser organizado, detallista y por cumplir con los requisitos
+                    propuestos. Además, disfruto liderar equipos, brindar ayuda a mis colegas y facilitar el trabajo en
+                    conjunto. Me considero una persona creativa, curiosa y reflexiva, cualidades que me han ayudado a
+                    alcanzar pequeños logros personales y profesionales.
+                </p>
+                <p class="exp">Tuve la oportunidad de representar a mi universidad en proyectos de innovación, con mi
+                    equipo logramos el primer lugar a nivel provincial durante cinco ocasiones. Uno de esos proyectos
+                    incluso se llevó a cabo a partir de nuestra presentación.
+                </p>
+                <p class="exp">Trabajé en una startup donde empecé como tutor y coach dando soporte técnico a los
+                    estudiantes.
+                    Con el paso del tiempo llegué a asumir un rol híbrido que combinaba soporte con desarrollo de
+                    proyectos, hasta formar parte del equipo de desarrollo Front-End de la herramienta principal. Allí
+                    pude demostrar mis capacidades técnicas, adaptabilidad y proactividad al proponer mejoras que
+                    facilitaron el trabajo del equipo.
+                </p>
+                <p class="exp">He participado en reuniones con clientes y he liderado un equipo rotativo en un proyecto
+                    interno cumpliendo el rol de Líder Ágil y Product Owner. Esta experiencia y mi formación en
+                    Introducción al Desarrollo Ágil permitieron que uniese los conocimientos del enfoque tradicional que
+                    he adquirido en Ingeniería con metodologías ágiles modernas.
+                </p>
             </div>
 
             <div class="main-text">
-                <h3>Driven by a curiosity to learn and improve, I continuously explore new tools and methodologies to
-                    enhance my work. Whether working on web applications, mobile interfaces, or design systems, I am
-                    committed to delivering high-quality results that make a difference for users and businesses alike.
+                <h3>
+                    Me gusta aprender haciendo. Cuando veo algo que me resulta interesante, disfruto intentar
+                    replicarlo, ya sea una animación, un diseño, una edición, una funcionalidad. Esa curiosidad me
+                    empuja a descubrir diferentes herramientas: desde editores de video e imagen hasta plataformas que
+                    optimizan el diseño y desarrollo web; también me gusta probar diferentes IA que me voy encontrando,
+                    son nuevas oportunidades para optimizar tiempos, los resultados, e incluso complementar mis propias
+                    ideas. No estoy centrado en una única área, investigo, pruebo y a medida que hago esto, aprendo lo
+                    que sea para llegar al resultado que deseo. Y así, voy acumulando conocimientos que hacen más rica
+                    mi base técnica en HTML, CSS y otras tecnologías y que me ayudan a trabajar sobre los proyectos con
+                    una mirada más creativa.
                 </h3>
             </div>
 
@@ -142,7 +164,7 @@
                             <div class="project-gallery">
                                 <!-- Proyecto 1 -->
                                 <article class="project-card">
-                                    <div class="project-image" style="background-image: url('ruta/a/tu-imagen.jpg');">
+                                    <div class="project-image" style="background-image: url('/img/Image-primary.jpg');">
                                         <div class="project-content">
                                             <h3 class="project-title">Nombre del Proyecto</h3>
                                             <p class="project-description">Breve descripción del proyecto</p>
@@ -156,7 +178,7 @@
 
                                 <!-- Proyecto 2 -->
                                 <article class="project-card">
-                                    <div class="project-image" style="background-image: url('ruta/a/otra-imagen.jpg');">
+                                    <div class="project-image" style="background-image: url('/img/Image-primary.jpg');">
                                         <div class="project-content">
                                             <h3 class="project-title">Otro Proyecto</h3>
                                             <p class="project-description">Otra descripción interesante</p>
