cambios en los items en experiencia
se agregaron los datos correspondientes

--- a/index.html
+++ b/index.html
@@ -209,17 +209,12 @@
                             <div class="experience-tasks">
                                 <h4>Key Responsibilities:</h4>
                                 <ul>
-                                    <li>Conducted user research and usability testing to drive design decisions</li>
-                                    <li>Created wireframes, prototypes, and high-fidelity visual designs</li>
-                                    <li>Developed and maintained design systems for consistent branding</li>
-                                    <li>Worked cross-functionally to ensure seamless implementation of designs</li>
-                                    <li>Led the design of responsive interfaces for all device sizes</li>
-                                    <li>Managed a small team of junior designers</li>
-                                    <li>Presented design concepts to clients and stakeholders</li>
-                                    <li>Stayed updated on industry trends and technologies</li>
+                                    <li>Desarrollo y mantenimiento de proyectos internos y externos (stack MERN). </li>
+                                    <li>Coordinación con clientes, definición de funcionalidades, liderazgo de tareas.</li>
+                                    <li>Uso de Trello y Jira básico para gestión de proyectos.</li>
+                                    <li>Documentación técnica y pruebas de funcionalidades.</li>
                                 </ul>
                             </div>
-
                         </div>
 
                     </article>
@@ -460,14 +455,9 @@
                             <div class="experience-tasks">
                                 <h4>Key Responsibilities:</h4>
                                 <ul>
-                                    <li>Conducted user research and usability testing to drive design decisions</li>
-                                    <li>Created wireframes, prototypes, and high-fidelity visual designs</li>
-                                    <li>Developed and maintained design systems for consistent branding</li>
-                                    <li>Worked cross-functionally to ensure seamless implementation of designs</li>
-                                    <li>Led the design of responsive interfaces for all device sizes</li>
-                                    <li>Managed a small team of junior designers</li>
-                                    <li>Presented design concepts to clients and stakeholders</li>
-                                    <li>Stayed updated on industry trends and technologies</li>
+                                    <li>Entrenamiento intensivo en Aptugo. </li>
+                                    <li>Resolución de dudas técnicas en plataforma de estudio.</li>
+                                    <li>practica con la herramienta Aptugo.</li>
                                 </ul>
                             </div>
 
